--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "schema": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
